v3: Fix CSS flickering: hide fadedown and checkbox elements via CSS

--- a/cosinnus/static/less/general.less
+++ b/cosinnus/static/less/general.less
@@ -186,9 +186,13 @@ body, .x-v3-container, .x-v3-content {
 }
 
 
-// .fadedown
+/** .fadedown */
 .fadedown {
 	.clearfix();
+}
+/** Any element in a .fadedown container is hidden, except its first child element */
+.fadedown:not(.open) > :not(:first-child) {
+    display: none;
 }
 
 p.navi-explanation {
